--- a/src/main/resources/com/example/mealplanner/chooserecipe.fxml
+++ b/src/main/resources/com/example/mealplanner/chooserecipe.fxml
@@ -33,6 +33,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
@@ -92,6 +93,9 @@
                   <Font size="20.0" />
                </font>
             </Label>
+            <Button fx:id="btnAddRecipe" layoutX="522.0" layoutY="22.0" mnemonicParsing="false" text="Add New Recipe" />
+            <Button fx:id="btnExit" layoutX="29.0" layoutY="22.0" mnemonicParsing="false" text="Back" />
+            <Button fx:id="btnAddtoShoppingList" layoutX="372.0" layoutY="22.0" mnemonicParsing="false" text="Add to Shopping List" />
       </children>
     </AnchorPane>
   </children>
