--- a/src/main/resources/com/example/mealplanner/chooserecipe.fxml
+++ b/src/main/resources/com/example/mealplanner/chooserecipe.fxml
@@ -33,17 +33,11 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mealplanner.chooserecipeController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.mealplanner.chooserecipeController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -92,6 +86,18 @@
                   <Font size="20.0" />
                </font>
             </Label>
+        <Button fx:id="addBtn" layoutX="103.0" layoutY="322.0" mnemonicParsing="false" onMouseClicked="#onAddButtonClick" stylesheets="@../../../../java/values/style.css" text="Add a Recipe" textFill="#fffafa">
+          <font>
+            <Font name="System Bold" size="14.0" />
+          </font></Button>
+        <Button fx:id="shoppingBtn" layoutX="294.0" layoutY="322.0" mnemonicParsing="false" onMouseClicked="#onShoppingButtonClick" stylesheets="@../../../../java/values/style.css" text="My Shopping List" textFill="WHITE">
+          <font>
+            <Font name="System Bold" size="14.0" />
+          </font></Button>
+        <Button fx:id="exitBtn" layoutX="549.0" layoutY="322.0" mnemonicParsing="false" styleClass="exit-button" stylesheets="@../../../../java/values/style.css" text="Exit" textFill="WHITE">
+          <font>
+            <Font name="System Bold" size="14.0" />
+          </font></Button>
       </children>
     </AnchorPane>
   </children>
